--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <distributionManagement>
+    <repository>
+        <id>bintray-repo-maven-example</id>
+        <url>https://api.bintray.com/maven/lwhsu/maven/hello/;publish=1</url>
+    </repository>
+  </distributionManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.testng</groupId>
