--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.lwhsu.test</groupId>
   <artifactId>hello</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>hello</name>
@@ -24,7 +23,7 @@
   <distributionManagement>
     <repository>
         <id>bintray</id>
-        <url>https://api.bintray.com/maven/{bintray-user}/{bintray-repo}/{package}</url>
+        <url>https://api.bintray.com/maven/lwhsu/maven/hello</url>
     </repository>
   </distributionManagement>
 
