--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.lwhsu.test</groupId>
   <artifactId>hello</artifactId>
-  <version>0.0.23</version>
+  <version>0.0.24-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>hello</name>
@@ -13,7 +13,7 @@
     <connection>scm:git:https://github.com/lwhsu/java-hello.git</connection>
     <developerConnection>scm:git:git@github.com:lwhsu/java-hello.git</developerConnection>
     <url>https://github.com/lwhsu/java-hello</url>
-    <tag>hello-0.0.23</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
